Solve update kotlintest problems (#1255)
Remove/deprecate `DeferredK` due to unsafe Bracket instance and to reduce maintenance effort

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,8 @@ org.gradle.jvmargs=-Xmx4g
 # Kotlin configuration
 kotlin.incremental=true
 # Kotlin Test configuration
-kotlintest.parallelism=2
+#Parallelism needs to be set to 1 since the concurrent tests in arrow-effects become flaky otherwise
+kotlintest.parallelism=1
 # Pomfile definitions
 POM_DESCRIPTION=Functional companion to Kotlin's Standard Library
 POM_URL=https://github.com/arrow-kt/arrow/
