Add Semiring documentation template

--- a/modules/docs/arrow-docs/docs/_data/sidebar.yml
+++ b/modules/docs/arrow-docs/docs/_data/sidebar.yml
@@ -229,6 +229,9 @@ options:
       - title: Monoid
         url: /docs/arrow/typeclasses/monoid/
 
+      - title: Semiring
+        url: /docs/arrow/typeclasses/semiring/
+
       - title: Foldable
         url: /docs/arrow/typeclasses/foldable/
 
