Update Semiring documentation to new format

--- a/modules/docs/arrow-docs/docs/_data/sidebar.yml
+++ b/modules/docs/arrow-docs/docs/_data/sidebar.yml
@@ -237,7 +237,7 @@ options:
         url: /docs/arrow/typeclasses/monoid/
 
       - title: Semiring
-        url: /docs/arrow/typeclasses/semiring/
+        url: /docs/apidocs/arrow-typeclasses/arrow.typeclasses/-semiring/
 
       - title: Foldable
         url: /docs/arrow/typeclasses/foldable/
