--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ buildscript {
         classpath "net.rdrei.android.buildtimetracker:gradle-plugin:0.11.1"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
         classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:$detekt_version"
+        classpath "me.champeau.gradle:jmh-gradle-plugin:0.4.7"
     }
 }
 
