--- a/modules/benchmarks/arrow-benchmarks-effects/build.gradle
+++ b/modules/benchmarks/arrow-benchmarks-effects/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile project(":arrow-effects-extensions")
     compile project(":arrow-effects-io-extensions")
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxCoroutinesVersion"
 }
 
 apply plugin: "me.champeau.gradle.jmh"
