shows Fx is not stack safe

--- a/modules/effects/arrow-effects-data/build.gradle
+++ b/modules/effects/arrow-effects-data/build.gradle
@@ -13,3 +13,9 @@ dependencies {
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
 apply plugin: 'kotlin-kapt'
+
+compileKotlin {
+    kotlinOptions {
+        freeCompilerArgs = ["-XXLanguage:+InlineClasses"]
+    }
+}
