--- a/modules/docs/arrow-docs/docs/_data/doc-versions.yml
+++ b/modules/docs/arrow-docs/docs/_data/doc-versions.yml
@@ -1,5 +1,4 @@
 docVersions:
-
     - title: "v0.8.2"
       url: https://0-8-2.arrow-kt.io/
       previous: https://0-8-2.arrow-kt.io/
@@ -11,3 +10,8 @@ docVersions:
     - title: "NEXT"
       url: https://next.arrow-kt.io/
       previous: https://arrow-kt.io/
+
+docMenu:
+    - title: Documentation
+      url: /docs
+      icon: "fa-book"
