--- a/modules/benchmarks/arrow-benchmarks-effects/build.gradle
+++ b/modules/benchmarks/arrow-benchmarks-effects/build.gradle
@@ -16,10 +16,10 @@ apply plugin: "io.morethan.jmhreport"
 jmh {
     include = [
             'arrow.benchmarks.effects.Pure',
-            'arrow.benchmarks.effects.Delay',
-            'arrow.benchmarks.effects.Async',
-            'arrow.benchmarks.effects.HandleNonRaised',
-            'arrow.benchmarks.effects.HandleRaisedError'
+//            'arrow.benchmarks.effects.Delay',
+            'arrow.benchmarks.effects.Async'
+//            'arrow.benchmarks.effects.HandleNonRaised',
+//            'arrow.benchmarks.effects.HandleRaisedError'
     ]
     resultFormat = 'json'
     resultsFile = file('build/reports/benchmarks.json')
