--- a/modules/docs/arrow-docs/docs/_data/doc-versions.yml
+++ b/modules/docs/arrow-docs/docs/_data/doc-versions.yml
@@ -1,13 +1,17 @@
 docVersions:
+    - title: "v0.8.0"
+      url: https://0-8-0.arrow-kt.io/
+      previous: https://0-8-0.arrow-kt.io/
+
     - title: "v0.8.2"
       url: https://0-8-2.arrow-kt.io/
-      previous: https://0-8-2.arrow-kt.io/
+      previous: https://0-8-0.arrow-kt.io/
 
-    - title: "v1"
+    - title: "v0.8.3"
       url: https://arrow-kt.io/
       previous: https://0-8-2.arrow-kt.io/
 
-    - title: "NEXT"
+    - title: "v0.9.0"
       url: https://next.arrow-kt.io/
       previous: https://arrow-kt.io/
 
@@ -15,3 +19,8 @@ docMenu:
     - title: Documentation
       url: /docs
       icon: "fa-book"
+
+# Literals
+previous: PREVIOUS
+stable: STABLE
+next: NEXT
