--- a/modules/effects/arrow-effects-rx2-extensions/build.gradle
+++ b/modules/effects/arrow-effects-rx2-extensions/build.gradle
@@ -2,6 +2,7 @@ dependencies {
     compile project(':arrow-effects-rx2-data')
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     compile project(':arrow-annotations')
+    compile project(':arrow-mtl')
     kapt project(':arrow-meta')
     kaptTest project(':arrow-meta')
     compileOnly project(':arrow-meta')
