--- a/build.gradle
+++ b/build.gradle
@@ -17,21 +17,21 @@
 buildscript {
     ext {
         // Constants
-        gradleVersion = '4.10'
-        gradleVersionsPluginVersion = '0.20.0'
-        javaVersion = JavaVersion.VERSION_1_7
-        jUnitVersion = '4.12'
-        jUnitVintageVersion = '5.2.0'
-        kotlinTestVersion = '3.3.1'
-        kotlinVersion = '1.3.11'
-        daggerVersion = '2.17'
-        kotlinxCoroutinesVersion = '1.1.0'
-        kotlinxCollectionsImmutableVersion = '0.1'
-        kotlinPoetVersion = '1.1.0'
-        projectReactorVersion = '3.1.8.RELEASE'
-        rxJavaVersion = '2.2.1'
-        dokka_version = '0.9.17'
+        daggerVersion = '2.21'
         detekt_version = '1.0.0-RC12'
+        dokka_version = '0.9.17'
+        gradleVersionsPluginVersion = '0.20.0'
+        jUnitVersion = '4.12'
+        jUnitVintageVersion = '5.4.0'
+        javaVersion = JavaVersion.VERSION_1_7
+        kotlinPoetVersion = '1.1.0'
+        kotlinTestVersion = '3.3.1'
+        kotlinVersion = '1.3.21'
+        kotlinxCollectionsImmutableVersion = '0.1'
+        kotlinxCoroutinesVersion = '1.1.1'
+        projectReactorVersion = '3.2.6.RELEASE'
+        retrofitVersion = '2.5.0'
+        rxJavaVersion = '2.2.7'
     }
 
     repositories {
@@ -210,6 +210,11 @@ tasks.create('repl') {
             args("-cp", buildableProjectsConfig.files.join(':'))
         }
     }
+}
+
+tasks.wrapper {
+    gradleVersion = "5.2.1"
+    distributionType = Wrapper.DistributionType.ALL
 }
 
 apply plugin: 'com.github.ben-manes.versions'
