--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ buildscript {
         daggerVersion = '2.17'
         kotlinxCoroutinesVersion = '1.1.0'
         kotlinxCollectionsImmutableVersion = '0.1'
-        kotlinPoetVersion = '1.0.0-RC1'
+        kotlinPoetVersion = '1.1.0'
         projectReactorVersion = '3.1.8.RELEASE'
         rxJavaVersion = '2.2.1'
         dokka_version = '0.9.17'
