--- a/modules/shadow/arrow-shadow/build.gradle
+++ b/modules/shadow/arrow-shadow/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.0'
+        classpath 'com.github.jengelman.gradle.plugins:shadow:5.0.0'
     }
 }
 
@@ -11,11 +11,12 @@ apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'java'
 
 ext {
-    metaArrowVersion = '0.7.3'
+    metaArrowVersion = '0.9.0'
 }
 
 dependencies {
-    compile "io.arrow-kt:arrow-effects:$metaArrowVersion"
+    compile "io.arrow-kt:arrow-effects-data:$metaArrowVersion"
+    compile "io.arrow-kt:arrow-effects-extensions:$metaArrowVersion"
     compile "io.arrow-kt:arrow-optics:$metaArrowVersion"
 }
 
