Used separate kotlin version definition for ank since it is not working properly with None / Some with latest Kotlin 1.3.21 but works on 1.3.11.

--- a/modules/ank/arrow-ank/build.gradle
+++ b/modules/ank/arrow-ank/build.gradle
@@ -6,8 +6,8 @@ dependencies {
     compile project(":arrow-extras-extensions")
     compile project(":arrow-effects-io-extensions")
 
-    compile "org.jetbrains.kotlin:kotlin-compiler:$kotlinVersion"
-    compile "org.jetbrains.kotlin:kotlin-script-util:$kotlinVersion"
+    compile "org.jetbrains.kotlin:kotlin-compiler:$ankKotlinVersion"
+    compile "org.jetbrains.kotlin:kotlin-script-util:$ankKotlinVersion"
     kapt project(':arrow-meta')
 }
 
