--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ import com.github.benmanes.gradle.versions.reporter.PlainTextReporter
 buildscript {
     ext {
         // Constants
+        ankKotlinVersion = '1.3.11'
         daggerVersion = '2.21'
         detekt_version = '1.0.0-RC12'
         dokka_version = '0.9.17'
