--- a/modules/ank/arrow-ank/build.gradle
+++ b/modules/ank/arrow-ank/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'kotlin'
+apply plugin: 'kotlin-kapt'
 
 dependencies {
     compile project(":arrow-core-extensions")
     compile project(":arrow-extras-extensions")
     compile project(":arrow-effects-io-extensions")
 
-    compile "org.jetbrains.kotlin:kotlin-compiler:$kotlinVersion"
-    compile "org.jetbrains.kotlin:kotlin-script-util:$kotlinVersion"
+    compile "org.jetbrains.kotlin:kotlin-compiler:$ankKotlinVersion"
+    compile "org.jetbrains.kotlin:kotlin-script-util:$ankKotlinVersion"
     kapt project(':arrow-meta')
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
-apply plugin: 'kotlin-kapt'
