Slight updates to doc version management

--- a/modules/docs/arrow-docs/docs/_data/doc-versions.yml
+++ b/modules/docs/arrow-docs/docs/_data/doc-versions.yml
@@ -13,9 +13,9 @@ docVersions:
       previous: https://arrow-kt.io/
 
 docMenu:
-    - title: Documentation
-      url: /docs
-      icon: "fa-book"
+    title: Documentation
+    url: /docs
+    icon: "fa-book"
 
 # Literals
 previous: PREVIOUS
