progress on trampoline Ec with @nomisrev

--- a/modules/effects/arrow-effects-io-extensions/build.gradle
+++ b/modules/effects/arrow-effects-io-extensions/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'kotlin-kapt'
 
 dependencies {
+    compile project(':arrow-free-data')
     compile project(':arrow-effects-data')
     compile project(':arrow-effects-extensions')
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
