--- a/modules/benchmarks/arrow-benchmarks-effects/build.gradle
+++ b/modules/benchmarks/arrow-benchmarks-effects/build.gradle
@@ -14,21 +14,21 @@ apply plugin: "io.morethan.jmhreport"
 
 jmh {
     include = [
-            'arrow.benchmarks.Async',
-            'arrow.benchmarks.AttemptNonRaised',
-            'arrow.benchmarks.AttemptRaisedError',
-            'arrow.benchmarks.Bracket',
-            'arrow.benchmarks.Cancellable',
-            'arrow.benchmarks.Delay',
-            'arrow.benchmarks.ForkFiber',
-            'arrow.benchmarks.HandleNonRaised',
-            'arrow.benchmarks.HandleRaisedError',
-            'arrow.benchmarks.Map',
-            'arrow.benchmarks.MapStream',
-            'arrow.benchmarks.ParMap',
-            'arrow.benchmarks.Pure',
-            'arrow.benchmarks.RacePair',
-            'arrow.benchmarks.Uncancellable'
+//            'arrow.benchmarks.Async'
+//            'arrow.benchmarks.AttemptNonRaised',
+//            'arrow.benchmarks.AttemptRaisedError'
+//            'arrow.benchmarks.Bracket',
+//            'arrow.benchmarks.Cancellable',
+//            'arrow.benchmarks.Delay',
+//            'arrow.benchmarks.ForkFiber',
+//            'arrow.benchmarks.HandleNonRaised',
+//            'arrow.benchmarks.HandleRaisedError',
+//            'arrow.benchmarks.Map',
+//            'arrow.benchmarks.MapStream',
+//            'arrow.benchmarks.ParMap',
+            'arrow.benchmarks.Pure'
+//            'arrow.benchmarks.RacePair',
+//            'arrow.benchmarks.Uncancellable'
     ]
     resultFormat = 'json'
     resultsFile = file('build/reports/benchmarks.json')
