--- a/modules/benchmarks/arrow-benchmarks-effects/build.gradle
+++ b/modules/benchmarks/arrow-benchmarks-effects/build.gradle
@@ -19,11 +19,11 @@ jmh {
 //            'arrow.benchmarks.AttemptRaisedError'
 //            'arrow.benchmarks.Bracket',
 //            'arrow.benchmarks.Cancellable',
-//            'arrow.benchmarks.Delay',
+            'arrow.benchmarks.Delay',
 //            'arrow.benchmarks.ForkFiber',
 //            'arrow.benchmarks.HandleNonRaised',
 //            'arrow.benchmarks.HandleRaisedError',
-//            'arrow.benchmarks.Map',
+            'arrow.benchmarks.Map',
 //            'arrow.benchmarks.MapStream',
 //            'arrow.benchmarks.ParMap',
             'arrow.benchmarks.Pure'
