--- a/modules/docs/arrow-docs/docs/_data/sidebar.yml
+++ b/modules/docs/arrow-docs/docs/_data/sidebar.yml
@@ -360,6 +360,9 @@ options:
 
       - title: Ref
         url: /docs/effects/ref/
+        
+      - title: Resource
+        url: /docs/effects/resource
 
   - title: Optics
 
