--- a/modules/docs/arrow-docs/docs/_data/sidebar.yml
+++ b/modules/docs/arrow-docs/docs/_data/sidebar.yml
@@ -362,7 +362,7 @@ options:
         url: /docs/effects/ref/
 
       - title: Resource
-        url: /docs/effects/resource
+        url: /docs/apidocs/arrow-effects-data/resource
 
   - title: Optics
 
