--- a/modules/benchmarks/arrow-benchmarks-effects/build.gradle
+++ b/modules/benchmarks/arrow-benchmarks-effects/build.gradle
@@ -14,7 +14,7 @@ apply plugin: "io.morethan.jmhreport"
 
 jmh {
     include = [
-            'arrow.benchmarks.Map'
+            'arrow.benchmarks.FxMap'
     ]
     resultFormat = 'json'
     resultsFile = file('build/reports/benchmarks.json')
