General recursion and more recursion schemes

--- a/modules/recursion/arrow-recursion-data/build.gradle
+++ b/modules/recursion/arrow-recursion-data/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'kotlin-kapt'
 
 dependencies {
+    compile project(':arrow-free-extensions')
     compile project(':arrow-extras-extensions')
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     compile project(':arrow-annotations')
