--- a/modules/recursion/arrow-recursion-extensions/build.gradle
+++ b/modules/recursion/arrow-recursion-extensions/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile project(':arrow-recursion-data')
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     compile project(':arrow-annotations')
+    compile project(':arrow-free-data')
     kapt project(':arrow-meta')
     kaptTest project(':arrow-meta')
     compileOnly project(':arrow-meta')
