Improve benchmarks, Trampoline wrapper, new Array Stack based on the one in cats-effect and increase loop throughput

--- a/modules/benchmarks/arrow-benchmarks-effects/build.gradle
+++ b/modules/benchmarks/arrow-benchmarks-effects/build.gradle
@@ -14,7 +14,8 @@ apply plugin: "io.morethan.jmhreport"
 
 jmh {
     include = [
-            'arrow.benchmarks.FxMap'
+            'arrow.benchmarks.Delay',
+            'arrow.benchmarks.Map'
     ]
     resultFormat = 'json'
     resultsFile = file('build/reports/benchmarks.json')
