--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
         daggerVersion = '2.21'
         detekt_version = '1.0.0-RC12'
         dokka_version = '0.9.18'
+        ktlint_version = '7.3.0'
         gradleVersionsPluginVersion = '0.21.0'
         jUnitVersion = '4.12'
         jUnitVintageVersion = '5.4.0'
@@ -56,6 +57,7 @@ buildscript {
         classpath "net.rdrei.android.buildtimetracker:gradle-plugin:0.11.1"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
         classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:$detekt_version"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktlint_version"
     }
 }
 
@@ -87,6 +89,7 @@ subprojects { project ->
     apply plugin: 'jacoco'
     apply plugin: 'org.jetbrains.dokka'
     apply plugin: 'io.gitlab.arturbosch.detekt'
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
 
     archivesBaseName = POM_ARTIFACT_ID
 
