Rewrite Pure-map optimisation to Lazy optmisation

--- a/modules/benchmarks/arrow-benchmarks-effects/build.gradle
+++ b/modules/benchmarks/arrow-benchmarks-effects/build.gradle
@@ -14,7 +14,10 @@ apply plugin: "io.morethan.jmhreport"
 
 jmh {
     include = [
-            'arrow.benchmarks.Delay'
+            'arrow.benchmarks.Pure',
+            'arrow.benchmarks.Delay',
+            'arrow.benchmarks.DeepBind',
+            'arrow.benchmarks.Map'
     ]
     resultFormat = 'json'
     resultsFile = file('build/reports/benchmarks.json')
