Extend finger tree Api + tests

--- a/modules/core/arrow-extras-data/build.gradle
+++ b/modules/core/arrow-extras-data/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     testCompileOnly project(':arrow-meta')
     testRuntime("org.junit.vintage:junit-vintage-engine:$jUnitVintageVersion")
     testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
+    testCompile "io.mockk:mockk:$mockkVersion"
     testCompile project(':arrow-syntax')
     testCompile project(':arrow-extras-extensions')
     testCompile project(':arrow-test')
