--- a/settings.gradle
+++ b/settings.gradle
@@ -117,5 +117,10 @@ include {
         validation {
             _ 'validation'
         }
+
+        benchmarks {
+            _ 'scala-benchmarks'
+            _ 'benchmarks-effects'
+        }
     }
 }
