Enable project parallelism for Gradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ GROUP=io.arrow-kt
 VERSION_NAME=0.9.1-SNAPSHOT
 # Gradle options
 org.gradle.jvmargs=-Xmx4g
+org.gradle.parallel=true
 # Kotlin configuration
 kotlin.incremental=true
 # Kotlin Test configuration
