--- a/modules/core/arrow-extras-extensions/build.gradle
+++ b/modules/core/arrow-extras-extensions/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-kapt'
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     compile project(':arrow-annotations')
-    compile project(':arrow-typeclasses')
+    compile project(':arrow-core-typeclasses')
     compile project(':arrow-extras-data')
     compile project(':arrow-core-extensions')
     kapt project(':arrow-meta')
