--- a/modules/docs/arrow-docs/build.gradle
+++ b/modules/docs/arrow-docs/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compile project(':arrow-free-data')
     compile project(':arrow-test')
     compile project(':arrow-free-extensions')
-    compile project(':arrow-typeclasses')
+    compile project(':arrow-core-typeclasses')
     compile project(':arrow-generic')
     compile project(':arrow-query-language')
     compile project(":arrow-reflect")
