--- a/settings.gradle
+++ b/settings.gradle
@@ -51,7 +51,7 @@ include {
             _ 'mtl'
             _ 'syntax'
             _ 'test'
-            _ 'typeclasses'
+            _ 'core-typeclasses'
         }
 
         free {
