Fix benchmarks and add CI step

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ jobs:
   include:
   - stage: build
     script:
-    - ./gradlew clean build
+    - ./gradlew clean build :arrow-benchmarks-effects:jmhClasses
   - stage: coverage-report
     script:
     - ./gradlew codeCoverageReport
