--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ evaluationDependsOn(":$compilerPlugin.name")
 apply plugin: 'kotlin'
 //apply plugin: 'kotlinx-serialization'
 
-compileKotlin.kotlinOptions.freeCompilerArgs = ['-Xplugin=', new File(compilerPlugin.buildDir, "libs/${compilerPlugin.name}.jar")]
+compileKotlin.kotlinOptions.freeCompilerArgs = ['-Xplugin', new File(compilerPlugin.buildDir, "libs/${compilerPlugin.name}.jar")]
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
