--- a/modules/effects/arrow-effects-rx2-data/build.gradle
+++ b/modules/effects/arrow-effects-rx2-data/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     testCompileOnly project(':arrow-meta')
     testRuntime("org.junit.vintage:junit-vintage-engine:$jUnitVintageVersion")
     testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
+    testCompile "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:$kotlinxCoroutinesVersion"
     testCompile project(':arrow-test')
     testCompile project(":arrow-effects-rx2-extensions")
 
