--- a/modules/core/arrow-extras-data/build.gradle
+++ b/modules/core/arrow-extras-data/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-kapt'
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     compile project(':arrow-annotations')
-    compile project(':arrow-core-data') // has to be deleted in another PR
+    compile project(':arrow-core-data') // TODO: delete this import: due to this Issue: https://github.com/arrow-kt/arrow/pull/1458#issuecomment-496022046
     kapt project(':arrow-meta')
     kaptTest project(':arrow-meta')
     compileOnly project(':arrow-meta')
