splitted arrow-mtl into arrow-mtl-data and arrow-mtl-extensions

--- a/modules/core/arrow-test/build.gradle
+++ b/modules/core/arrow-test/build.gradle
@@ -4,7 +4,7 @@ dependencies {
     compile project(':arrow-extras-data')
     compile project(':arrow-optics')
     compile project(':arrow-effects-data')
-    compile project(':arrow-mtl')
+    compile project(':arrow-mtl-data')
     compile project(':arrow-free-data')
     compile project(':arrow-extras-extensions')
     compile project(':arrow-effects-extensions')
