--- a/modules/aql/arrow-query-language/build.gradle
+++ b/modules/aql/arrow-query-language/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-kapt'
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     compile project(':arrow-annotations')
-    compile project(':arrow-mtl')
+    compile project(':arrow-mtl-extensions')
     kapt project(':arrow-meta')
     kaptTest project(':arrow-meta')
     compileOnly project(':arrow-meta')
