--- a/modules/core/arrow-core-data/build.gradle
+++ b/modules/core/arrow-core-data/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     testCompile project(':arrow-test')
     testCompile project(':arrow-syntax')
     testCompile project(':arrow-core-extensions')
+    testCompile project(':arrow-mtl-extensions')
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
