--- a/modules/core/arrow-mtl-data/build.gradle
+++ b/modules/core/arrow-mtl-data/build.gradle
@@ -3,7 +3,8 @@ apply plugin: 'kotlin-kapt'
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     compile project(':arrow-annotations')
-    compile project(':arrow-extras-extensions')
+    compile project(':arrow-core-data')
+    compile project(':arrow-core-extensions')
     kapt project(':arrow-meta')
     kaptTest project(':arrow-meta')
     compileOnly project(':arrow-meta')
@@ -11,6 +12,8 @@ dependencies {
     testRuntime("org.junit.vintage:junit-vintage-engine:$jUnitVintageVersion")
     testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
     testCompile project(':arrow-test')
+    testCompile project(':arrow-syntax')
+    testCompile project(':arrow-mtl-extensions')
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
