--- a/modules/core/arrow-mtl-extensions/build.gradle
+++ b/modules/core/arrow-mtl-extensions/build.gradle
@@ -3,18 +3,16 @@ apply plugin: 'kotlin-kapt'
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     compile project(':arrow-annotations')
-    compile project(':arrow-core-data') // TODO: delete this import: due to this Issue: https://github.com/arrow-kt/arrow/pull/1458#issuecomment-496022046
+    compile project(':arrow-mtl-data')
+    compile project(':arrow-extras-data')
+    compile project(':arrow-extras-extensions')
     kapt project(':arrow-meta')
     kaptTest project(':arrow-meta')
     compileOnly project(':arrow-meta')
     testCompileOnly project(':arrow-meta')
     testRuntime("org.junit.vintage:junit-vintage-engine:$jUnitVintageVersion")
     testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
-    testCompile project(':arrow-syntax')
-    testCompile project(':arrow-extras-extensions')
     testCompile project(':arrow-test')
-    testCompile project(':arrow-mtl-extensions')
-    testCompile project(':arrow-effects-extensions')
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
