--- a/modules/core/arrow-core-data/build.gradle
+++ b/modules/core/arrow-core-data/build.gradle
@@ -11,8 +11,8 @@ dependencies {
     testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
     testCompile project(':arrow-test')
     testCompile project(':arrow-syntax')
-    testCompile project(':arrow-core-extensions')
-    testCompile project(':arrow-mtl-extensions')
+    testCompile project(':arrow-core')
+    testCompile project(':arrow-mtl')
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
