--- a/settings.gradle
+++ b/settings.gradle
@@ -43,15 +43,22 @@ include {
 
         core {
             _ 'core-data'
-            _ 'core-extensions'
+            _ 'core'
             _ 'extras-data'
             _ 'extras-extensions'
             _ 'generic'
             _ 'kindedj'
-            _ 'mtl-extensions'
-            _ 'mtl-data'
             _ 'syntax'
             _ 'test'
+        }
+
+        mtl {
+            _ 'mtl'
+            _ 'mtl-data'
+        }
+
+        ui {
+            _ 'ui-data'
         }
 
         free {
