--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,14 +9,10 @@ compileKotlin.kotlinOptions.freeCompilerArgs = ['-Xplugin', new File(compilerPlu
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 //    compile "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.11.0"
 }
 
 afterEvaluate {
     tasks["compileKotlin"].dependsOn += compilerPlugin.tasks["jar"]
-}
-
-task execute(type:JavaExec) {
-    main = "arrow.sample.test"
-    classpath = sourceSets.main.runtimeClasspath
 }
