Ain't no Coproducts... anymore

--- a/modules/docs/arrow-docs/docs/_data/sidebar.yml
+++ b/modules/docs/arrow-docs/docs/_data/sidebar.yml
@@ -35,17 +35,10 @@ options:
       - title: Type Classes
         url: /docs/apidocs/arrow-typeclasses/
 
+      # TODO: Add title and Url for arrow-core, arrow-ui, arrow-mtl-data
+
       - title: Core Data Types
         url: /docs/apidocs/arrow-core-data/
-
-      - title: Core Extensions
-        url: /docs/apidocs/arrow-core/
-
-      - title: Core Extra Data Types
-        url: /docs/apidocs/arrow-extras/
-
-      - title: Core Extra Extensions
-        url: /docs/apidocs/arrow-extras-extensions/
 
       - title: Effects
         url: /docs/apidocs/arrow-effects-data/
@@ -94,6 +87,7 @@ options:
 
       - title: Validation
         url: /docs/apidocs/arrow-validation/
+
 
   - title: Patterns
 
@@ -195,9 +189,6 @@ options:
 
       - title: Trampoline
         url: /docs/arrow/free/trampoline/
-
-      - title: Coproduct
-        url: /docs/arrow/data/coproduct/
 
       - title: Eval
         url: /docs/apidocs/arrow-core-data/arrow.core/-eval/
@@ -452,9 +443,6 @@ options:
 
   - title: Generic
     nested_options:
-
-      - title: Coproduct
-        url: /docs/generic/coproduct/
 
       - title: Product
         url: /docs/generic/product/
