Try noStdlibLink = true to pass the build

--- a/build.gradle
+++ b/build.gradle
@@ -117,6 +117,7 @@ subprojects { project ->
             suffix = "#L"
         }
 
+        noStdlibLink = true
     }
 
     task codeCoverageReport(type: JacocoReport) {
