cleanup ReadMe and merged last commit in master

--- a/modules/core/arrow-core-data/build.gradle
+++ b/modules/core/arrow-core-data/build.gradle
@@ -10,9 +10,8 @@ dependencies {
     testRuntime("org.junit.vintage:junit-vintage-engine:$jUnitVintageVersion")
     testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
     testCompile project(':arrow-test')
-    testCompile project(':arrow-syntax')
+    testCompile project(':arrow-syntax') // TODO: remove
     testCompile project(':arrow-core')
-    testCompile project(':arrow-mtl')
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
