--- a/modules/optics/arrow-optics/build.gradle
+++ b/modules/optics/arrow-optics/build.gradle
@@ -1,17 +1,16 @@
 apply plugin: 'kotlin-kapt'
 
 dependencies {
-    compile project(':arrow-mtl-data')
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+    compile project(':arrow-annotations')
+    compile project(':arrow-optics-mtl')
+
+    kapt project(':arrow-meta')
+    kaptTest project(':arrow-meta')
+
     testCompile("junit:junit:$jUnitVersion")
     testRuntime("org.junit.vintage:junit-vintage-engine:$jUnitVintageVersion")
     testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
     testCompile project(':arrow-test')
-    testCompile project(':arrow-optics-mtl')
-
-    compile project(':arrow-annotations')
-    kapt project(':arrow-meta')
-    kaptTest project(':arrow-meta')
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
