Add Option doc inside the code class

--- a/modules/docs/arrow-docs/docs/_data/sidebar.yml
+++ b/modules/docs/arrow-docs/docs/_data/sidebar.yml
@@ -123,7 +123,7 @@ options:
         url: /docs/datatypes/basic/
 
       - title: Option
-        url: /docs/arrow/core/option/
+        url: /docs/apidocs/arrow-core-data/arrow.core/-option/
 
       - title: Either
         url: /docs/arrow/core/either/
