--- a/compiler-plugin/build.gradle
+++ b/compiler-plugin/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
-compileKotlin.kotlinOptions.freeCompilerArgs = ['-Xskip-runtime-version-check', 'true']
+//compileKotlin.kotlinOptions.freeCompilerArgs = ['-Xskip-runtime-version-check', 'true']
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
