--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,23 @@
 buildscript {
-    ext.kotlin_version = '1.3.31'
+  ext {
+    kotlin_version = '1.3.31'
+  }
 
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+  repositories {
+    mavenCentral()
+  }
+}
+
+plugins {
+  id 'org.jetbrains.kotlin.jvm' version '1.3.31'
+  id 'org.jetbrains.kotlin.kapt' version '1.3.31'
+  id 'com.github.johnrengelman.shadow' version '5.0.0'
 }
 
 allprojects {
-    repositories {
-        jcenter()
-        maven { url "https://kotlin.bintray.com/kotlinx" }
-    }
+  repositories {
+    maven { url "https://kotlin.bintray.com/kotlinx" }
+    mavenCentral()
+    jcenter()
+  }
 }
