--- a/idea-plugin/src/main/resources/META-INF/plugin.xml
+++ b/idea-plugin/src/main/resources/META-INF/plugin.xml
@@ -19,7 +19,7 @@
 <depends>org.jetbrains.kotlin</depends>
 
 <extensions defaultExtensionNs="org.jetbrains.kotlin">
-    <gradleProjectImportHandler implementation="nl.fabianm.kotlin.plugin.generated.idea.GeneratedGradleImportHandler" />
+    <gradleProjectImportHandler implementation="arrow.meta.plugin.idea.ArrowGradleImportHandler" />
 </extensions>
 
 </idea-plugin>
