--- a/compiler-plugin/build.gradle
+++ b/compiler-plugin/build.gradle
@@ -1,14 +1,12 @@
-plugins {
-  id 'org.jetbrains.kotlin.jvm'
-  id 'org.jetbrains.kotlin.kapt'
-  id 'com.github.johnrengelman.shadow'
-}
+apply plugin: 'kotlin'
+apply plugin: 'kotlin-kapt'
+//apply plugin: 'com.github.johnrengelman.shadow'
 
 compileKotlin.kotlinOptions.freeCompilerArgs = ['-Xskip-runtime-version-check', 'true']
 
 dependencies {
   compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  compile "org.jetbrains.kotlin:kotlin-compiler:$kotlin_version"
+  compile "org.jetbrains.kotlin:kotlin-compiler-embeddable:$kotlin_version"
 
   compile "com.google.auto.service:auto-service:+"
   kapt "com.google.auto.service:auto-service:+"
@@ -29,13 +27,12 @@ jar {
   }
 }
 
-shadowJar {
-  configurations = []
-  classifier = "embeddable"
-  relocate("com.intellij", "org.jetbrains.kotlin.com.intellij")
-}
-
-// Create embeddable configuration
-configurations.create("embeddable") {
-  extendsFrom(configurations.shadow)
-}
+//shadowJar {
+//  configurations = []
+//  classifier = "embeddable"
+//}
+//
+//// Create embeddable configuration
+//configurations.create("embeddable") {
+//  extendsFrom(configurations.shadow)
+//}
