--- a/consumer/build.gradle
+++ b/consumer/build.gradle
@@ -1,6 +1,4 @@
-plugins{
-    id 'org.jetbrains.kotlin.jvm'
-}
+apply plugin: 'kotlin'
 
 repositories {
     flatDir {
@@ -13,7 +11,6 @@ dependencies {
     compile project(':core')
     implementation name: "core"
 }
-
 
 task execute(type:JavaExec) {
     main = "arrow.sample.test"
