--- a/idea-plugin/build.gradle
+++ b/idea-plugin/build.gradle
@@ -1,11 +1,8 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm'
     id 'org.jetbrains.intellij' version '0.4.9'
 }
 
-repositories {
-    jcenter()
-}
+apply plugin: 'kotlin'
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
