--- a/modules/benchmarks/arrow-benchmarks-effects/build.gradle
+++ b/modules/benchmarks/arrow-benchmarks-effects/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
     compile project(":arrow-effects-data")
-    compile project(":arrow-effects-rx2-extensions")
+    compile project(":arrow-effects-rx2-data")
     compile project(":arrow-effects-reactor-data")
     compile project(":arrow-scala-benchmarks")
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
