--- a/modules/integrations/arrow-integrations-retrofit-adapter/build.gradle
+++ b/modules/integrations/arrow-integrations-retrofit-adapter/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
     testCompile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     testCompile 'com.squareup.okhttp3:mockwebserver:3.13.1'
-    testCompile project(':arrow-effects-rx2-extensions')
+    testCompile project(':arrow-effects-rx2-data')
     testCompile project(':arrow-effects-data')
 }
 
