--- a/modules/docs/arrow-examples/build.gradle
+++ b/modules/docs/arrow-examples/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile project(':arrow-optics')
     compile project(':arrow-ui')
     compile project(':arrow-validation')
-
+    compile project(':arrow-mtl')
     kapt project(':arrow-meta')
     kaptTest project(':arrow-meta')
     compileOnly project(':arrow-meta')
