--- a/modules/effects/arrow-effects-mtl/build.gradle
+++ b/modules/effects/arrow-effects-mtl/build.gradle
@@ -3,7 +3,8 @@ apply plugin: 'kotlin-kapt'
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     compile project(':arrow-annotations')
-    compile project(':arrow-core')
+    compile project(':arrow-effects-data')
+    compile project(':arrow-mtl')
     kapt project(':arrow-meta')
     kaptTest project(':arrow-meta')
     compileOnly project(':arrow-meta')
@@ -11,9 +12,6 @@ dependencies {
     testRuntime("org.junit.vintage:junit-vintage-engine:$jUnitVintageVersion")
     testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
     testCompile project(':arrow-test')
-    testCompile project(':arrow-syntax')
-    testCompile project(':arrow-mtl')
-    testCompile project(':arrow-effects-mtl')
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
