--- a/settings.gradle
+++ b/settings.gradle
@@ -67,6 +67,7 @@ include {
 
         effects {
             _ 'effects-data'
+            _ 'effects-mtl'
             _ 'effects-rx2-data'
             _ 'effects-reactor-data'
         }
