--- a/modules/docs/arrow-docs/docs/_data/sidebar.yml
+++ b/modules/docs/arrow-docs/docs/_data/sidebar.yml
@@ -126,7 +126,7 @@ options:
         url: /docs/apidocs/arrow-core-data/arrow.core/-option/
 
       - title: Either
-        url: /docs/arrow/core/either/
+        url: /docs/apidocs/arrow-core-data/arrow.core/-either/
 
       - title: Try
         url: /docs/arrow/core/try/
