--- a/modules/docs/arrow-docs/build.gradle
+++ b/modules/docs/arrow-docs/build.gradle
@@ -16,13 +16,13 @@ dependencies {
     compile project(':arrow-fx-reactor')
     compile project(':arrow-optics')
     compile project(':arrow-validation')
-    compile project(':arrow-recursion-extensions')
+    compile project(':arrow-recursion')
     compile project(':arrow-integrations-retrofit-adapter')
     compile project(':arrow-mtl-data')
     compile project(':arrow-free-data')
     compile project(':arrow-test')
     compile project(':arrow-ui')
-    compile project(':arrow-free-extensions')
+    compile project(':arrow-free')
     compile project(':arrow-generic')
     compile project(':arrow-query-language')
     compile project(":arrow-reflect")
