--- a/modules/docs/arrow-docs/docs/_data/sidebar.yml
+++ b/modules/docs/arrow-docs/docs/_data/sidebar.yml
@@ -129,7 +129,7 @@ options:
         url: /docs/apidocs/arrow-core-data/arrow.core/-either/
 
       - title: Try
-        url: /docs/arrow/core/try/
+        url: /docs/apidocs/arrow-core-data/arrow.core/-try/
 
       - title: Validated
         url: /docs/arrow/data/validated/
