--- a/modules/docs/arrow-docs/docs/_data/sidebar.yml
+++ b/modules/docs/arrow-docs/docs/_data/sidebar.yml
@@ -132,7 +132,7 @@ options:
         url: /docs/apidocs/arrow-core-data/arrow.core/-try/
 
       - title: Validated
-        url: /docs/arrow/data/validated/
+        url: /docs/apidocs/arrow-core-data/arrow.core/-validated/
 
       - title: NonEmptyList
         url: /docs/arrow/data/nonemptylist/
