Add the arrow-persistent-data-structures module

--- a/settings.gradle
+++ b/settings.gradle
@@ -90,6 +90,10 @@ include {
             _ 'optics'
             _ 'optics-mtl'
         }
+        
+        persistent {
+            _ 'persistent-data-structures'
+        }
 
         streams {
             _ 'streams'
