#638: add indents to ank:playground snippets, add main() to ank:playground

--- a/settings.gradle
+++ b/settings.gradle
@@ -108,9 +108,9 @@ include {
             _ 'reflect'
         }
 
-        validation {
-            _ 'validation'
-        }
+//        validation {
+//            _ 'validation'
+//        }
 
         benchmarks {
             _ 'scala-benchmarks'
